############################################################
EFA Version 3.0.1.6 Changes
############################################################

Issue #263  Bug             - Postfix Install Mangling of main.cf
Issue #326  Bug             - MCP not functional
Issue #328  Bug             - ClamAV Not Updating
Issue #331  Enhancement     - Move Version into MailWatch
PR    #332  Bug             - Increase the number of characters allowed for the TLD
Issue #334, #234, #212 Bug  - MailWatch Update
Issue #335  Bug             - EFA-Configure Recusion Toggle Broken
Issue #340  Bug             - Inline Signature bug in EFA-Configure
Issue #341  Bug             - LANG option missing in MailWatch update

Postfix updated to version 3.1.3

############################################################
EFA Version 3.0.1.5 Changes
############################################################

Issue #299  Enhancement     - Enhance menus in EFA-Configure (allow back out)
Issue #320  Bug             - /root/.spamassassin inaccessible
Issue #322  Enhancement     - Geoip update during EFA-Init 
Issue #323  Bug             - clamav-unofficial-sigs not running

############################################################
EFA Version 3.0.1.4 Changes
############################################################

Issue #315  Regression      - Regression in Quarantine Reports

############################################################
EFA Version 3.0.1.3 Changes
############################################################

Issue #308  Bug             - ClamAV Status Page blank
Issue #309  Bug             - Anacron daily notifications from mailscanner
Issue #311  Bug             - Quarantine Permissions Issue in 3.0.1.2
Issue #312  Bug             - MailScanner access to EFA-Config denied

Updated clamav, clamd, mysql, and mysql-server

############################################################
EFA Version 3.0.1.2 Changes
############################################################
