@@ -1,4 +1,12 @@
 ############################################################
+EFA Version 3.0.1.7 TEST PLAN
+############################################################
+
+MailWatch
+  Version version in footer present
+  Verify Issue #346 fixed
+
+############################################################
 EFA Version 3.0.1.6 TEST PLAN
 ############################################################
 
