@@ -1,4 +1,12 @@
 ############################################################
+EFA Version 3.0.1.7 Changes
+############################################################
+
+Issue #346  Bug             - EFA 3.0.1.6 mailwatch is empty after Update GeoIP Database
+
+Updated MailWatch to 1.2.0 - RC4 release
+
+############################################################
 EFA Version 3.0.1.6 Changes
 ############################################################
 
